service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sticker
spec:
  type: NodePort
  selector:
    app: sticker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
