ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sticker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /sticker/(.*)
        pathType: Prefix
        backend:
          service:
            name: sticker
            port:
              number: 8080
